--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     ]
   },
   "devDependencies": {
-    "@react-native-community/cli": "^10.1.3"
+    "@react-native-community/cli": "^10.1.3",
+    "dotenv-webpack": "^8.0.1"
   }
 }
